wip: service progress

--- a/3waimslp/.env
+++ b/3waimslp/.env
@@ -25,6 +25,8 @@ APP_SECRET=a1ef0118d6e6c060b2e01716f2453979
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
+DATABASE_URL=postgres://llmfwrzn:EJiW3z-E3LzNu_NtpC2tolz6iArwYie2@surus.db.elephantsql.com/llmfwrzn
+
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
