--- a/3waimslp/config/packages/security.yaml
+++ b/3waimslp/config/packages/security.yaml
@@ -17,8 +17,17 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\UsersAuthenticator
+
+            entry_point: form_login
+
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                default_target_path: app_home
+
             logout:
                 path: app_logout
+                target: app_home
                 # where to redirect after logout
                 # target: app_any_route
 
